css/main.css
.sidenav p, .btn-sample, .menu-items, .social-media
h1,
h2,
h3,
h4 {
    font-family: 'Lobster', cursive;
}

.btn-sample {
    color: #FFFFFF;
    background-color: #ff78de;
    border-color: #D4910C;
    margin-top: 20px;
    width: 200px;
    height: 40px;
}

.btn-sample:hover,
.btn-sample:focus,
.btn-sample:active,
.btn-sample.active,
.open .dropdown-toggle.btn-sample {
    color: #FFFFFF;
    background-color: #ff05b5;
    border-color: #D4910C;
}

.btn-sample:active,
.btn-sample.active,
.open .dropdown-toggle.btn-sample {
    background-image: none;
}

.btn-sample.disabled,
.btn-sample[disabled],
fieldset[disabled] .btn-sample,
.btn-sample.disabled:hover,
.btn-sample[disabled]:hover,
fieldset[disabled] .btn-sample:hover,
.btn-sample.disabled:focus,
.btn-sample[disabled]:focus,
fieldset[disabled] .btn-sample:focus,
.btn-sample.disabled:active,
.btn-sample[disabled]:active,
fieldset[disabled] .btn-sample:active,
.btn-sample.disabled.active,
.btn-sample[disabled].active,
fieldset[disabled] .btn-sample.active {
    background-color: #FFAD05;
    border-color: #D4910C;
}

.btn-sample .badge {
    color: #FFAD05;
    background-color: #FFFFFF;
}

s p{
    font-family: 'Raleway', sans-serif;
}

.title {
    color: #6d03cd;
}

.subtitle {
    color: #ece8ef;
    /* ece8ef #044389;*/
}

.jumbotron1 {
    text-align: center;
    width: 100vw;
    height: 100vh;
    /*background: #ece8ef;*/
    background-image: url("SisterHacks_background.jpg");
    background-repeat: no-repeat;
    background-size:cover;
}

.jumbotron1 h1 {
    color: #ece8ef;
    /*#6d03cd;*/
    font-family: 'Lobster', cursive;
    margin-top: 115px;
    text-shadow: .03em .03em 0 hsla(212, 94%, 28%, 1);
}

.jumbotron1 h2 {
  font-family:'Utopia',serif;
  /*padding-top: 10px;*/
}

.jumbotron1 h3 {
    padding: 5vh 0;
}

.jumbotron1 img {
    padding: 0 0;
}

.btn-primary.outline {
    border: 2px solid #6e75ab;
    color: #6e75ab;
}

.left {
    padding-top: 4vh;
    text-align: left;
}

.center {
    text-align: center;
    align-content: center;
}

.right {
    padding-top: 6vh;
    text-align: right;
}

.section {
    padding: 8vh 2vh 3vh 2vh;
}

.col-sm-6 {
  padding-bottom: 8vh;
}

.col-md-4 {
  padding-bottom: 14vh;
  padding-right: 8vh;
}


.section p {
    padding-top: 3vh;
    font-size: 2.5vh;
    line-height: 1.5;
    color: #0c056d;
}

.section h2 {
    color: #f25d9c;
    /* 044389 ece8ef */
    font-size: 60px;
    text-align: center;
}

.about p {
    font-size: 3vh;
}

.faq p {
    font-size: 2vh;

}

.faq b {
    font-size: 3vh;
}

/*.faq {
    padding: 0 10vw;
    margin-right: 2vw;
}*/

.schedule {
    padding: 0vw 9vw;
    text-align: left;
}

.sponsor p {
    width: 50vw;
    text-align: left;
}

.about div, .faq div .schedule div, .sponsor div, .register div {
    text-align: center;
    background-color: #ece8ef;
    /*#a1baf3; #ba69ff; #b45cff*/
    background-clip: content-box;
  /*  padding: 2vw 10vw;*/
}

.about-container, .faq-container, .schedule-container, .sponsor-container, .register-container, .team-container{
    width: 100vw;
    height: 50vw;
    background-color: #ece8ef;
    margin: 0;
    /*#a1baf3;*/
}
.faq-container {
  height: 60vw;
}
.team-container {
  height: 120vw;
}

.schedule-container, .sponsor-container {
  height: 20vw;
}

.sponsor-container, .sponsor div {
    background-color: white;
    width: 100%;
    padding: none;
}
.sponsor-container img {
    padding: 1%;
}
.schedule-container h3,
.schedule-container h4,
.schedule-container h5,
.schedule-container h6 {
    font-family: sans-serif;
}

.profiles {
    background-color: white;
}

.team {
    padding: 2vw 2vw;
}

.team img {
    background-size: cover;
    overflow:hidden;
    -webkit-border-radius:70px;
    -moz-border-radius:70px;
    border-radius:150px;
    width:220px;
    height:220px;
}

/*smartphone portrait*/

@media (min-width: 320px) {
    .title {
        font-size: 10vh;
    }
    .subtitle {
        font-size: 5vh;
    }
    .btn {
        font-size: 3em;
    }

}


/*smartphone landscape*/

@media (min-width: 481px) {
    .title {
        font-size: 15vh;
    }
    .subtitle {
        font-size: 5vh;
    }
    .title-body {
        font-size: 3vh;
    }
    .title-body img {
        height: 20vh;
    }
    .right {
        padding: 0 0 0 0;
    }
    .title-body img {
        height: 15vh;
    }
    .btn {
        font-size: 0.75em;
    }
}


/*tablet portrait*/

@media (min-width: 768px) {
    .title {
        font-size: 18vh;
    }
    .subtitle {
        font-size: 5vh;
    }
    .title-body {
        font-size: 3.5vh;
    }
    .title-body img {
        height: 15vh;
    }
    .right {
        padding: 0 0 0 0;
    }
    .btn {
        font-size: 0.5em;
    }
}


/*desktop and laptop*/

@media (min-width: 1200px) {
    .title {
        font-size: 20vh;
    }
    .subtitle {
        font-size: 5vh;
    }
}


/*wide screen*/

@media (min-width: 1600px) {
    .jumbotron1 {
        height: 94vh;
    }
    .title {
        font-size: 18vh;
    }
    .section {
        padding: 0 0;
    }
    .schedule {
        padding: 0 0;
    }
    .about div, .faq div .schedule div, .sponsor div, .register div .team div{
        padding: 4vw 0vw;
    }
}

.sidenav {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    /* dfd4fc */
    background-color: #ff78de;
    overflow-x: hidden;
    transition: 0.4s;
    padding-top: 60px;
}

.menu-items, .sidenav p {
    padding: 8px 8px 8px;
    text-decoration: none;
    font-size: 30px;
    color: #FFFFFF;
    display: block;
    transition: 0.3s;
    text-align: center;
}

.social-media li {
  display:inline;
  padding: 0px 30px 20px;
  margin-top: 50px;
  line-height: 300%;
  margin-right: 20px;
}

.social-media ul {
  list-style: none;
  color: #FFFFFF;
}

.social-media li :hover {
  color: #ff78de;
}

.closebtn {
    text-decoration: none;
    font-size: 25px;
    color: #FFFFFF;
    display: block;
    transition: 0.3s;
    text-align: center;
}

.sidenav p {
  font-size: 35px;
  margin-bottom: 10px;
  color: #6d03cd
  /*#6d03cd */
}

.sidenav a:hover {
  /* 6d03cd
  f1f1f1*/
    color: #6d03cd;
    text-decoration: none;
}

.sidenav .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
}

#menu {
    transition: margin-left .5s;
    padding-left: 25px;
    padding-top: 5px;
    text-align: left;
    color: #FFFFFF;
}
.fa {
  color: #ece8ef;
}

/* Three image containers (use 25% for four, and 50% for two, etc) */
#column {
  float: left;
  width: 40%;
  height: auto;
  padding: 15px;
}

.photos2018{
    float: left;
    width: 33.3%;
    padding: 5px;
}

.slideshow::after {
    content: "";
    clear: both;
    display: table;
}

/* source: http://css-workshop.com/hover-box-text-over-images-on-hover-and-more/ */
.hvrbox {
	position:relative;
	display: inline-block;
	overflow: hidden;
	max-width: 100%;
	height: auto;
}

.hvrbox .hvrbox-layer_top {
	opacity: 0;
  position: absolute;
  padding: 15px;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background: #f25d9c;
	color: #fff;

  -webkit-border-radius:50px;
  -moz-border-radius:50px;
  border-radius:150px;
  width:220px;
  height:220px;
	-moz-transition: all 0.4s ease-in-out 0s;
	-webkit-transition: all 0.4s ease-in-out 0s;
	-ms-transition: all 0.4s ease-in-out 0s;
	transition: all 0.4s ease-in-out 0s;
}
.hvrbox:hover .hvrbox-layer_top,
.hvrbox.active .hvrbox-layer_top {
	opacity: 1;
}
.hvrbox .hvrbox-text {
	text-align: center;
	font-size: 15px;
	display: inline-block;
	position: absolute;


	top: 20px;
	left: 0;
	right: 0;
	bottom: 0;
  /*
	top: 25%;
	left: 25%;
	-moz-transform: translate(-50%, -50%);
	-webkit-transform: translate(-50%, -50%);
	-ms-transform: translate(-50%, -50%);
	transform: translate(-50%, -50%);*/
}

